--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-leap-day
 title: QA Tool
 description: This is a collection of tools to use speed up the QA process on a CDK site.
 ---
