Get ready for release
updated some code to es6 standards

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ nextGen_tester_meta.js
 /undefined
 /testplan/404LinkCheckerTesting.xlsx
 /gifs/showNavDEMO.gif
+/node_modules
+/assets/js/rewrite.js
