--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-react": "^7.7.0",
 		"eslint-plugin-react-app": "^3.0.0",
-		"npm": "^6.0.0"
+		"npm": "^6.0.0",
+		"uglify-js": "^3.3.23"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
